--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Seeking for Full-time UX Design Position | UX Intern at Philips | Front-end Developer at Tencent">
-    <meta name="keywords" content="UX design,Interaction,Motion,Front-end">
-    <meta name="author" content="Xiaoxue(Ellie) Zhang">
+    <meta name="description" content="change">
+    <meta name="keywords" content="change">
+    <meta name="author" content="change">
+    <meta location="change">
     
-    <!--For LinkedIn to pull data-->
-    <meta property="og:title" content="Xiaoxue(Ellie) Zhang's Portfolio"/>
-    <meta property="og:image" content="http://xiaoxuezhang.info/assets/img/works/roovie/selected_page_1.png"/>
-    <meta property="og:description" content="A Passional UX Designer and Experienced Front-end Developer"/>
-    
-    <title>Xiaoxue(Ellie) Zhang's Portfolio</title>
+    <title>Ross Shelford - Graphic Designer</title>
 
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png"/>
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96.png"/>
@@ -57,8 +52,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Product Designer</h1>
-                    <h2>‎Currently working at Uber, focusing on Machine Learning and Design System. <br/>Previously working as a front-end developer at Tencent for 3 years.</h2>
+                    <h1>Ross Shelford</h1>
+                    <h2>Number one faggot</h2>
                 </div>
             </div>
         </div>
