Changed the subbers

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1>Ross Shelford</h1>
-                    <h2>Number one faggot</h2>
+                    <h2>Graphic Designer</h2>
                 </div>
             </div>
         </div>
