--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1>Ross Shelford</h1>
-                    <h2>Graphic Designer</h2>
+                    <h2>Currently working at Imagineear, focusing on Design Skills and User Experience. 
+                        <br/></h2>
                 </div>
             </div>
         </div>
@@ -68,8 +69,8 @@
                             <div class="overlay"></div>
                         </div>
                         <div class="item-info">
-                            <h4 class="item-name">Uber Machine Learning</h4>
-                            <p class="item-type">Product Design</p>
+                            <h4 class="item-name">Imagineear Devices</h4>
+                            <p class="item-type">Graphic Design</p>
                         </div>
                     </a>
                 </div>
@@ -80,8 +81,8 @@
                             <div class="overlay"></div>
                         </div>
                         <div class="item-info">
-                            <h4 class="item-name">Philips Healthcare</h4>
-                            <p class="item-type">Product Design</p>
+                            <h4 class="item-name">Print works</h4>
+                            <p class="item-type">Graphic Design</p>
                         </div>
                     </a>
                 </div>
@@ -94,8 +95,8 @@
                             <div class="overlay"></div>
                         </div>
                         <div class="item-info">
-                            <h4 class="item-name">Food Flow Mapper</h4>
-                            <p class="item-type">Product Design & Frontend Development</p>
+                            <h4 class="item-name">Mum & Baby</h4>
+                            <p class="item-type">Graphic Design + App Development</p>
                         </div>
                     </a>
                 </div>
